<resources>
    <string name="app_name">GifBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">1</string>
    <string name="nav_header_subtitle">2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="action_show_filenames">Show filenames</string>
    <string name="show_filenames">Show filenames</string>
    <string name="action_show_extension_icon">Show extension icon</string>
    <string name="show_extension_icon">Show extension icon</string>
    <string name="action_flexible_grid">Flexible grid</string>
    <string name="flexible_grid">Flexible grid</string>
    <string name="error_copying_gif">Error copying GIF: %s</string>
    <string name="error_sharing_file">Error sharing file: %s</string>
    <string name="share_via">Share via</string>
    <string name="gif_copied">GIF copied to clipboard</string>
    <string name="only_gif_clipboard">Only GIF files can be copied to clipboard</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm deletion</string>
    <string name="confirm_delete_message">Are you sure you want to delete this file?</string>
    <string name="deletion_failed">Failed to delete file</string>
    <string name="no_results_found">No results found</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="search_hint">Search GIFs...</string>
    <string name="error_playing_video">Error playing video</string>

    <string name="show_recent_files">Recent files</string>
    <string name="no_recent_files">No recent files</string>

    <string name="sort_settings">Sort settings</string>
    <string name="sort_by_most_used">Most used</string>
    <string name="sort_by_date">Creation date</string>
    <string name="sort_alphabetically">Alphabetically</string>
    <string name="sort_by_last_used">Last used</string>
    <string name="no_sort">No sorting</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <string name="accessibility_service_description">GifBox service for adding a button to the context menu of other applications</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_message">For GifBox to work, you need to enable the accessibility service. Go to settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info">Information</string>
    <string name="background_service_info">GifBox now works in background mode! You can close the app, and the GifBox button will still appear when text is selected in other apps.</string>
    <string name="understand">OK</string>
    
    <string name="service_notification_title">GifBox Service</string>
    <string name="service_notification_text">GifBox is running in background</string>
    <string name="service_channel_name">GifBox Service</string>
    <string name="service_channel_description">GifBox service for text selection</string>
    <string name="service_activated">GifBox service activated</string>
    <string name="service_will_be_activated">GifBox service will be activated</string>
    
    <string name="settings_button_type">Button type</string>
    <string name="settings_button_type_desc">Select which button type to use when text is selected</string>
    <string name="settings_button_function">Button function:</string>
    <string name="settings_enable_button">Enable button:</string>
    
    <string name="settings_overlay_button">Overlay button</string>
    <string name="settings_overlay_button_desc">Button that appears next to the context menu</string>
    <string name="settings_context_menu_button">System context menu button</string>
    <string name="settings_context_menu_button_desc">Button that appears in the system context menu</string>
    <string name="settings_translate_button">Translate menu button</string>
    <string name="settings_translate_button_desc">Button that appears in the system translate menu</string>
    
    <string name="settings_text_processing">Enable text processing</string>
    <string name="settings_text_processing_desc">Process selected text when GifBox button is clicked</string>
    <string name="settings_accessibility">Accessibility settings</string>
    <string name="settings_accessibility_desc">Open Android accessibility settings</string>
    <string name="settings_save">Save settings</string>
    <string name="settings_saved">Settings saved</string>
    <string name="text_processing_disabled">Text processing is disabled in settings</string>
    
    <string name="settings_mini_search">Use mini search dialog</string>
    <string name="settings_mini_search_desc">Show mini search dialog instead of direct processing when GifBox button is clicked</string>
    
    <string name="no_results">No matching GIFs found</string>
    
    <string name="convert_to_gif">Convert to GIF</string>
    <string name="convert_video_title">Convert Video to GIF</string>
    <string name="file_name">File: %1$s</string>
    <string name="file_info">Duration: %1$s, Size: %2$s, Resolution: %3$dx%4$d</string>
    <string name="quality_high">High</string>
    <string name="quality_medium">Medium</string>
    <string name="quality_low">Low</string>
    <string name="fps_label">FPS: %1$d</string>
    <string name="convert">Convert</string>
    <string name="conversion_progress">Conversion progress: %1$d%%</string>
    <string name="conversion_complete">Conversion complete</string>
    <string name="conversion_failed">Conversion failed: %1$s</string>
    <string name="converting">Converting...</string>
    
    <string-array name="button_types">
        <item>Both buttons</item>
        <item>Overlay button only</item>
        <item>Context menu button only</item>
    </string-array>
    
    <string-array name="button_functions">
        <item>Direct text processing</item>
        <item>Mini search dialog</item>
    </string-array>

    <string name="settings_theme">Тема</string>
    <string name="settings_theme_desc">Виберіть темну або світлу тему для додатку</string>
    <string name="settings_theme_system">Системна (за замовчуванням)</string>
    <string name="settings_theme_light">Світла</string>
    <string name="settings_theme_dark">Темна</string>
    
    <string name="settings_language">Мова</string>
    <string name="settings_language_desc">Виберіть мову інтерфейсу</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_ukrainian">Українська</string>
    <string name="action_sort_settings">Sorting</string>
    <string name="action_show_recent_files">Show recent files</string>
    <string name="create" >Create</string>
    <string name="upload_a_GIF" >Upload a GIF</string>
    <string name="coming_soon" >Coming soon...</string>
    <string name="action_sort_by_most_used">By usage frequency</string>
    <string name="action_sort_by_date">By date</string>
    <string name="action_sort_alphabetically">Alphabetically</string>
    <string name="action_sort_by_last_used">By last used</string>
    <string name="action_no_sort">No sorting</string>
    <string name="Change_the_name" >Change the name</string>
    <string name="Enter_a_new_name" >Enter a new name</string>
    <string name="Save" >Save</string>
    <string name="action_optimized_mode">Optimized mode</string>
    <string name="download">Download</string>
    <string name="search_online_gifs">Search online GIFs</string>
</resources>