<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_filenames"
        android:orderInCategory="100"
        android:title="@string/action_show_filenames"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_extension_icon"
        android:orderInCategory="110"
        android:title="@string/action_show_extension_icon"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_flexible_grid"
        android:orderInCategory="120"
        android:title="@string/action_flexible_grid"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_optimized_mode"
        android:orderInCategory="130"
        android:title="@string/action_optimized_mode"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_recent_files"
        android:orderInCategory="140"
        android:title="@string/action_show_recent_files"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_settings"
        android:orderInCategory="150"
        android:title="@string/action_sort_settings"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_most_used"
                    android:title="@string/action_sort_by_most_used" />
                <item
                    android:id="@+id/action_sort_by_date"
                    android:title="@string/action_sort_by_date" />
                <item
                    android:id="@+id/action_sort_alphabetically"
                    android:title="@string/action_sort_alphabetically" />
                <item
                    android:id="@+id/action_sort_by_last_used"
                    android:title="@string/action_sort_by_last_used" />
                <item
                    android:id="@+id/action_no_sort"
                    android:title="@string/action_no_sort" />
            </group>
        </menu>
    </item>
</menu>